# context-lens

./: README.md  contextlens_config.yaml  main.py  pyproject.toml
src/contextlens/: extractor.py  indexer.py  main.py  mcp_server.py  watcher.py
src/contextlens/embeddings/: base.py  factory.py  local.py
tests/: test_embeddings.py  test_extractor.py  test_indexer.py
